--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=gerenciador-tarefas
 
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS;databaseName=Gerenciador-Tarefas-DB;autoReconnect=true;useUnicode=true;characterEncoding=UTF-8;allowMultiQueries=true;useSSL=true;
+spring.datasource.username=SDSirius
+spring.datasource.password=SDMA4ever
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
