Connection String fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=gerenciador-tarefas
 
-spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS;databaseName=Gerenciador-Tarefas-DB;autoReconnect=true;useUnicode=true;characterEncoding=UTF-8;allowMultiQueries=true;useSSL=true;
-spring.datasource.username=SDSirius
-spring.datasource.password=SDMA4ever
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS;databaseName=Gerenciador-Tarefas-DB;integratedSecurity=false;encrypt=false;trustServerCertificate=true;
 
-spring.jpa.show-sql=true
+spring.datasource.username=sa
+spring.datasource.password=SDMA4ever*-+
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
